# authenticated-docker-examples

./: .gitignore  Dockerfile  Makefile  README.md  app.py  conda-lock.yml  docker-compose.yml  environment.yml
.github/workflows/: build.yaml  test.yaml
examples/: conda-lock.Dockerfile  conda.Dockerfile
examples/conda-lock/: Dockerfile  Makefile  conda-lock.yml  environment.yml
testing/: Dockerfile  conda-lock.Dockerfile  conda.Dockerfile  dotenv.Dockerfile
testing/conda-test-header-plugin/: pyproject.toml
testing/conda-test-header-plugin/src/conda_test_header_plugin/: __init__.py  plugin.py
