[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "conda-test-header-plugin"
description = "A plugin for injecting headers (just for testing)"
dependencies = [
  "conda >=24.11.0",
]
requires-python = ">=3.9"
version = "0.1.0"

[project.entry-points.conda]
conda-test-header-plugin = "conda_test_header_plugin.plugin"
